# gemma-tuner-multimodal

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT_NOTES.md  KNOWN_ISSUES.md  LICENSE  MIGRATION.md  README.md  TROUBLESHOOTING.md  __init__.py  check_blacklist.py  cli_typer.py  config.ini.example  distributed_hosts.json.example  main.py  pyproject.toml  requirements-gemma4.txt  requirements.txt  setup_mps.sh  visualizer.py  wizard.py
.github/: pull_request_template.md
README/: DEVELOPMENT_NOTES.md  Datasets.md  Distillation-eng.md  KNOWN_ISSUES.md  LoRA-eng.md  refactor-plan.md  refactorv2.md
config/: config.ini.example
gemma_tuner/: __init__.py  cli_typer.py  constants.py  main.py  manage.py  visualizer.py
static/: visualizer.js
templates/: index.html
tests/: conftest.py  manual_quick_viz.py  test_bootstrap.py  test_cli_help.py  test_config.py  test_config_defaults.py  test_dataset.py  test_dataset_utils.py  test_device.py  test_distillation_workflow.py  test_distributed_check.py  test_distributed_dry_run.py  test_distributed_launcher.py  test_family.py  test_finalization.py  test_finetune_core_data.py  test_finetune_core_trainer.py  test_finetune_model_load.py  test_finetune_peft_targets.py  test_gemma4_patches.py  test_gemma_collator.py  test_gemma_dataset_prep.py  test_gemma_image_collator.py  test_gemma_text_collator.py  test_generation_prompts.py  test_granary.py  test_inference.py  test_language_mode.py  test_lora_workflow.py  test_mps.py  test_resolve_processor_sampling_rate.py  test_resolve_training_torch_compile.py  test_runs.py  (+11 more)
(+104 files in other folders)
